<resources>
    <string name="app_name">Video Recorder</string>
    <string name="gcm_sender_id">157120645554</string>
    <string name="reviews">reviews</string>
    <string name="followers">followers</string>
    <string name="selling">selling</string>
    <string name="selling_cap">Selling</string>
    <string name="bought">Bought</string>
    <string name="sold">Sold</string>
    <string name="buy">Buy</string>
    <string name="followers_menu">Followers</string>
    <string name="following_menu">Following</string>
    <string name="follow">Follow</string>
    <string-array name="options_items_array">
        <item></item>
        <item>Selling</item>
        <item>Bought</item>
        <item>Sold</item>
    </string-array>
    <string name="my_items">My items</string>
    <string name="bold_dialog">Take a video of your product.</string>
    <string name="dialog_message">This is the first step to finish posting your item.</string>
    <string name="accept_dialog">Accept</string>
    <string name="buy_product_alert_dialog">You are about to buy this product. Please let us know how would you like it to be delivered to you?</string>
    <string name="change_cover_alert">You are about to change your cover picture. Please let us know how would you like it to do?</string>
    <string name="change_profile_alert">You are about to change your profile picture. Please let us know how would you like it to do?</string>
    <string name="first_take_video">First take video</string>
    <string name="take_multiple_clips_within_second">Take multiple clips within your 15 seconds of fame</string>
    <string name="step_one_third">Step 1/3</string>
    <string name="step_two_third">Step 2/3</string>
    <string name="selling_tips">Selling Tips</string>
    <string name="say_hi">1. Say Hi  2. Take multiple clips  3. Tell us about it</string>
    <string name="take_multiple_clips">2. Take multiple clips</string>
    <string name="tell_us_about_it">3. Tell us about it</string>
    <string name="take_preview_image">Take preview image!</string>
    <string name="this_is_third_step">This is the 3rd step</string>
    <string name="swip_for_filters">Swipe for\nfilters</string>
    <string name="record_video">STEP 1: RECORD VIDEO</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="input_tracking_code">Input Tracking Code Here</string>
    <string name="movv_code">Input Movv Code Here</string>
    <string name="select_option">Please select one of this two options</string>
    <string name="shipping_info">Fill in shipping info</string>
    <string name="address">Enter Address</string>
    <string name="postal_number">Postal Number</string>
    <string name="city">City</string>
    <string name="add_address">Add Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="message_from_movv">You have purchased Nike item, please leave your review.</string>
    <string name="rating_bar_string">Swipe to add stars.</string>
    <string name="talk_and_arange_details">You can talk and arange the details below</string>
    <string name="write_a_comment">   <i>say something nice...</i></string>
    <string name="street_settings">Street:</string>
    <string name="post_code_settings">Post Code:</string>
    <string name="Edit">Edit</string>
    <string name="city_settings">City:</string>
    <string name="state_settings">State:</string>
    <string name="shared_address">Your Address Will Only Be Shared with a Seller \n Who Is Attempting to Ship You an Item</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Confirm Password</string>
    <string name="email_settings">Email:</string>
    <string name="password_different">Passwords don\'t match!</string>
    <string name="how_it_works">How it works</string>
    <string name="text_how_it_works">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. \n \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="topic_title">Topic title:</string>
    <string name="message_settings">Message:</string>
    <string name="change_password">Change Password</string>
    <string name="change_address">Change Address</string>
    <string name="how_does_this_work">How does this work</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="arange_meeting">You can talk and arange the meet up below.</string>
    <string name="edit_cover_image">Edit cover image</string>
    <string name="account">Account</string>
    <string name="edit_address">Edit</string>
    <string name="push_notification">Push Notification</string>
    <string name="connect">Connect with friends</string>
    <string name="invite_facebook_friends">Invite Facebook Friends</string>
    <string name="invite_from_contacts">Invite From Contacts</string>
    <string name="setup_strip_acc">Setup your strip account</string>
    <string name="support">Support</string>
    <string name="how_does">How does this work</string>
    <string name="report_problem">Report a problem</string>
    <string name="logut">Log out</string>
    <string name="logout">Log out</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="choose_from_gallery">Choose from\ngallery</string>
    <string name="take_new_profile_picture">Take new profile\npicture</string>
    <string name="take_new_cover_picture">Take new cover\npicture</string>
    <string name="log_out">Logout</string>
    <string name="terms_conditions">By Signing in You Agree to Our Terms of Use and Privacy Policy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="signup">SIGN UP</string>
    <string name="signup_small">Signup</string>
    <string name="new_user_signup">Don\'t have an account?</string>
    <string name="facebook_app_id">2072586246300932</string>
    <string name="not_post_on_facebook">Will Not Post on Facebook Unsolicited</string>
    <string name="facebook_name"> Name</string>
    <string name="message">, Choose Your Username</string>
    <string name="upload_new_image">Upload new image</string>
    <string name="record_new_video">Record new video</string>
    <string name="enter_title">Title</string>
    <string name="enter_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="auto_location">Auto location:</string>
    <string name="select_tags">Tags</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="brand_name">Brand Name</string>
    <string name="price_value">$0</string>
    <string name="record_button_name">Record Video</string>
    <string name="upload_button_name">Upload Video</string>
    <string name="title_activity_record_video">RecordVideo</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="delete_last_segment">&lt; DELETE LAST SEGMENT</string>
    <string name="delete_segment_tip">Press again to remove segment.</string>
    <string name="send_offer">Send Offer</string>
    <string name="offer">Offer</string>
    <string name="meet">Meet</string>
    <string name="ship">Ship</string>
    <string name="must_off_atleast_fifty_percent">Must off at least 50% of asking price</string>
    <string name="offer_added_ur_cart">Great! Offer is now in your cart</string>
    <string-array name="search_item" >
        <item>All</item>
        <item>Bags</item>
        <item>Books</item>
        <item>Cars &amp; Motors</item>
        <item>Clothes</item>
        <item>Furniture</item>
        <item>Games</item>
        <item>Health &amp; Fitness</item>
        <item>Home</item>
        <item>Jewelry</item>
        <item>Makeup</item>
        <item>Movies/ books</item>
        <item>Music</item>
        <item>Shoes</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Transportation</item>
        <item>Other</item>
    </string-array>
    <string name="pay_with_card">Pay with a card</string>
    <string name="payment">Payment</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="enter_card_number">Please enter card number.</string>
    <string name="enter_expiry_date">Please enter card expiry date.</string>
    <string name="enter_cvv_no">Please enter card cvv number.</string>
    <string name="you_can_not_buy_ur_own_product">You cannot buy your own product!</string>
    <string name="shipping_address_label">SHIPPING ADDRESS</string>
    <string name="insert_card_info">INSERT CARD INFO</string>
    <string name="discount_code">DISCOUNT CODE</string>
    <string name="shipping_address">Click here to confirm/update\nyour shipping information</string>
    <string name="address_payment">Address:</string>
    <string name="postal_code_payment">Postal code:</string>
    <string name="city_payment">City:</string>
    <string name="state_payment">State</string>
    <string name="country_payment">Country:</string>
    <string name="card_number">1234 5678 1234 5678</string>
    <string name="buy_item">Buy item!</string>
    <string name="validation_errors">Validation Errors</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="meet_in_person">Meet in Person</string>
    <string name="shipp_it">Shipp It!</string>
    <string name="strip_acc">STRIP ACCOUNT SETTINGS</string>
    <string name="country_settings">Country :</string>
    <string name="valid_card_details">The card details that you entered are valid!</string>
    <string name="check_card">Check card</string>
    <string name="card_number_error">"Card number that you entered is invalid"</string>
    <string name="expiration_date_error">"The expiration date that you entered is invalid"</string>
    <string name="cvv_error">"The cvv number that you entered is invalid"</string>
    <string name="cvc_code_error">"The CVC code that you entered is invalid"</string>
    <string name="card_details_error">"The card details that you entered are invalid"</string>
    <string name="transcation_service">Transaction will be completed via Stripe</string>
    <string name="s3_access_key">AKIAIHTO2VPHSB52AOJQ</string>
    <string name="s3_secret">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</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
</resources>